--- a/index.html
+++ b/index.html
@@ -1,25 +1,15 @@
 <html>
- <head>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
- </head>
+<head>
+  <link rel="stylesheet" type="text/css" href="html/css/style.css">
+ </head> 
  <body>
-  <h1 id="test">
-   test
+  <h1 id="archive">
+   Archive
   </h1>
   <p>
-   test
-   <br/>
-   <em>
-    test
-   </em>
-   <br/>
-   <strong>
-    test
-   </strong>
-   <br/>
-   <del>
-    test
-   </del>
+   <a href="oecolampadius.github.io/html/a-bit-longer.html">
+    test post please ignore
+   </a>
   </p>
  </body>
 </html>
