--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    Archive
   </h1>
   <p>
-   <a href="oecolampadius.github.io/html/a-bit-longer.html">
+   <a href="/html/a-bit-longer.html">
     test post please ignore
    </a>
   </p>
